# dice-template-library

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_pointer_tagging.md  conanfile.py  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: tests_integral_templated_tuple.cpp.AF0794B940E6A88A.idx  tests_switch_template_functions.cpp.C551510F6D38A0E9.idx
.github/workflows/: code_testing.yaml  detect-pobr-diff.yml  publish-conan-branch-package.yml  publish-release.yml  push.yaml
cmake/: conan_cmake.cmake  dice-template-library-config.cmake.in  header-only-install.cmake  headerOnlyInstall.cmake  install_interface_library.cmake  install_module_library.cmake  version.cppm.in  version.hpp.in
examples/: CMakeLists.txt  example_channel.cpp  example_dbg.cpp  example_exchange_channel.cpp  example_flex_array.cpp  example_format_to_ostream.cpp  example_generator.cpp  example_graph.cpp  example_inplace_polymorphic.cpp  example_integral_sequence.cpp  example_ipow.cpp  example_iter_to_range.cpp  example_limit_allocator.cpp  example_memfn.cpp  example_mutex.cpp  example_next_to_range.cpp  example_opt_minmax.cpp  example_pointer_tag_pair.cpp  example_pool_allocator.cpp  example_ranges.cpp  example_shared_mutex.cpp  example_static_string.cpp  example_stdint.cpp  example_type_list.cpp  example_variant2.cpp  examples_IntegralTemplatedTuple.cpp  examples_SwitchTemplateFunctions.cpp  examples_defer.cpp  examples_fmt_join.cpp  examples_for.cpp  examples_functional.cpp  examples_integral_template_tuple.cpp  examples_integral_template_tuple_v2.cpp  examples_integral_template_variant.cpp  examples_integral_template_variant_v2.cpp  examples_integral_templated_tuple.cpp  examples_lazy_conditional.cpp  examples_overloaded.cpp  examples_polymorphic_allocator.cpp  examples_switch_cases.cpp  (+2 more)
include/: SwitchTemplateFunctions.hpp
include/Dice/: IntegralTemplatedTuple.hpp
include/Dice/template-library/: integral_template_tuple.hpp  switch_cases.hpp
include/Dice/template_library/: IntegralTemplatedTuple.hpp
include/dice/template-library/: bitset.hpp  channel.hpp  dbg.hpp  defer.hpp  exchange_channel.hpp  flex_array.hpp  fmt_join.hpp  for.hpp  format_to_ostream.hpp  functional.hpp  generator.hpp  graph.hpp  inplace_polymorphic.hpp  integral_sequence.hpp  integral_template_common.hpp  integral_template_tuple.hpp  integral_template_tuple_v2.hpp  integral_template_variant.hpp  integral_template_variant_v2.hpp  integral_templated_variant.hpp  ipow.hpp  iter_to_range.hpp  lazy_conditional.hpp  limit_allocator.hpp  macro_util.hpp  memfn.hpp  mutex.hpp  next_to_range.hpp  offset_ptr_stl_allocator.hpp  opt_minmax.hpp  overloaded.hpp  pointer_tag_pair.hpp  polymorphic_allocator.hpp  pool_allocator.hpp  ranges.hpp  sandbox.hpp  shared_mutex.hpp  standard_layout_tuple.hpp  static_string.hpp  static_vector.hpp  (+8 more)
src/dice/template-library/: channel.cppm  dtl.cppm  flex_array.cppm  fmt_join.cppm  for.cppm  format_to_ostream.cppm  functional.cppm  inplace_polymorphic.cppm  integral_sequence.cppm  integral_template_tuple.cppm  integral_template_variant.cppm  lazy_conditional.cppm  limit_allocator.cppm  mutex.cppm  next_to_range.cppm  opt_minmax.cppm  overloaded.cppm  pointer_tag_pair.cppm  polymorphic_allocator.cppm  pool_allocator.cppm  ranges.cppm  shared_mutex.cppm  standard_layout_tuple.cppm  static_string.cppm  stdint.cppm  switch_cases.cppm  tuple_algorithm.cppm  type_list.cppm  type_traits.cppm  variant2.cppm  version.cppm
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  tests_IntegralTemplatedTuple.cpp  tests_SwitchTemplateFunctions.cpp  tests_bitset.cpp  tests_channel.cpp  tests_dbg.cpp  tests_defer.cpp  tests_exchange_channel.cpp  tests_flex_array.cpp  tests_fmt_join.cpp  tests_for.cpp  tests_format_to_ostream.cpp  tests_functional.cpp  tests_generator.cpp  tests_graph.cpp  tests_inplace_polymorphic.cpp  tests_integral_template_tuple.cpp  tests_integral_template_tuple_v2.cpp  tests_integral_template_variant.cpp  tests_integral_template_variant_v2.cpp  tests_integral_templated_tuple.cpp  tests_integral_templated_variant.cpp  tests_ipow.cpp  tests_iter_to_range.cpp  tests_lazy_conditional.cpp  tests_limit_allocator.cpp  tests_macro_util.cpp  tests_memfn.cpp  tests_mutex.cpp  tests_next_to_range.cpp  tests_offset_ptr_stl_allocator.cpp  tests_opt_minmax.cpp  tests_overloaded.cpp  tests_pointer_tag_pair.cpp  tests_polymorphic_allocator.cpp  tests_pool_allocator.cpp  tests_ranges.cpp  tests_sandbox.cpp  tests_shared_mutex.cpp  tests_standard_layout_tuple.cpp  (+10 more)
